fix text overflow in comments

--- a/src/app/components/common/comments/comment-item/comment-item.component.scss
+++ b/src/app/components/common/comments/comment-item/comment-item.component.scss
@@ -14,6 +14,7 @@
     border-bottom-left-radius: 1.5rem;
     border: 0.1rem solid $theme-main-color;
     background-color: $theme-main-color;
+    max-width: 100%;
     color: $white;
 
     &:hover {
@@ -48,6 +49,7 @@
 
 .comment-message {
     padding: 1.5rem;
+    word-break: break-word;
 }
 
 .comment-footer {
